
SUBDIRS = \
	bumpy_ride	\
	bunny_hill	\
	challenge_one	\
	chinese_wall	\
	chragis_gagiwaetter \
	course \
	downhill_fear \
	explore_mountains \
	frozen_lakes \
	frozen_river \
	hippo_run \
	holygrail \
	in_search_of_vodka \
	keep_country_tidy \
	milos_castle \
	path_of_daggers \
	penguins_cant_fly \
	quiet_river \
	secret_valleys \
	this_means_something \
	tux_at_home \
	twisty_slope	\
	wild_mountains

pkgdatadir = $(datadir)/$(PACKAGE)/courses

pkgdata_DATA = \
	courses.lst \
	events.lst

EXTRA_DIST = $(pkgdata_DATA)
