
pkgdatadir = $(datadir)/$(PACKAGE)/music

pkgdata_DATA = \
	music.lst	\
	readme	\
	racing_themes.lst	\
	credits1-cp.ogg	\
	calmrace-ks.ogg	\
	freezingpoint.ogg	\
	lostrace-ks.ogg	\
	options1-jt.ogg	\
	race1-jt.ogg	\
	raceintro-ks.ogg	\
	spunkyrace-ks.ogg	\
	start1-jt.ogg	\
	wonrace1-jt.ogg

EXTRA_DIST = $(pkgdata_DATA)
