
pkgdatadir = $(datadir)/$(PACKAGE)/players

pkgdata_DATA = \
	avatars.lst	\
	avatar01.png	\
	avatar02.png	\
	avatar03.png	\
	avatar04.png	\
	avatar05.png	\
	avatar06.png	\
	avatar07.png	\
	avatar08.png	\
	avatar09.png	\
	avatar10.png	\
	avatar11.png	\
	avatar12.png	\
	avatar13.png	\
	avatar14.png	\
	avatar15.png	\
	avatar16.png	\
	avatar17.png

EXTRA_DIST = $(pkgdata_DATA)
