
pkgdatadir = $(datadir)/$(PACKAGE)/terrains

pkgdata_DATA = \
	terrains.lst	\
	snow.png	\
	snow01.png	\
	snow02.png	\
	snow03.png	\
	rock.png	\
	rock01.png	\
	rock02.png	\
	rock03.png	\
	rock04.png	\
	rock05.png	\
	rock06.png	\
	rock07.png	\
	ice.png	\
	ice01.png	\
	ice02.png	\
	ice03.png	\
	snowy_ice.png	\
	snowy_ice02.png	\
	snowy_ice03.png	\
	snowy_rock02.png	\
	snowy_rock06.png	\
	sand01.png	\
	dirt01.png	\
	mud01.png	\
	pave01.png	\
	pave02.png	\
	icy_pave01.png	\
	icy_pave04.png	\
	icy_pave05.png	\
	pebbles01.png	\
	pebbles04.png	\
	pebbles05.png	\
	icy_rock06.png	\
	floor01.png	\
	floor02.png	\
	icy_floor01.png	\
	grass01.png	\
	grass02.png	\
	grass03.png	\
	snowy_grass03.png	\
	icy_grass03.png	\
	icy_grass04.png

EXTRA_DIST = $(pkgdata_DATA)
