
pkgdatadir = $(datadir)/$(PACKAGE)/textures

pkgdata_DATA = \
	textures.lst	\
	splash_small.png	\
	snowstart.png	\
	snowtrack.png	\
	snowstop.png	\
	menu_title.png	\
	menu_title_small.png	\
	listbox_arrows.png	\
	speedmeter.png	\
	light_butt.png	\
	snow_butt.png	\
	wind_butt.png	\
	menu_bottom_left.png	\
	menu_bottom_right.png	\
	menu_top_left.png	\
	menu_top_right.png	\
	tuxbonus.png	\
	mouse_cursor.png	\
	snowparticles.png	\
	envmap.png	\
	energymask2.png	\
	mask_outline2.png	\
	ziff032.png	\
	mirror_butt.png	\
	random_butt.png	\
	herringicon3.png	\
	timeicon.png	\
	stars.png	\
	speedknob2.png	\
	cupicon.png	\
	checkbox.png	\
	checkmark_small.png	\
	checkmark.png	\
	widgets.png	\
	snow1.png	\
	snow2.png	\
	snow3.png	\
	herringicon.png	\
	gaugeoutline.png	\
	gaugeenergymask.png	\
	gaugespeedmask.png

EXTRA_DIST = $(pkgdata_DATA)
