
pkgdatadir = $(datadir)/$(PACKAGE)/translations

pkgdata_DATA = \
	languages.lst	\
	eu_ES.lst	\
	de_DE.lst	\
	es_ES.lst	\
	fr_FR.lst	\
	it_IT.lst	\
	nl_NL.lst	\
	nb_NO.lst	\
	nn_NO.lst	\
	pl_PL.lst	\
	pt_PT.lst	\
	ru_RU.lst	\
	ro_RO.lst	\
	sk_SK.lst	\
	fi_FI.lst	\
	sv_SE.lst

EXTRA_DIST = $(pkgdata_DATA)
