nobase_dist_ppdata_DATA = \
			courses/contrib/doing/terrain.png \
			courses/contrib/doing/elev.png \
			courses/contrib/doing/preview.png \
			courses/contrib/doing/trees.png \
			courses/contrib/doing/course.tcl \
			courses/contrib/doing/info.tcl \
courses/events/c-mountain_mania/herringrunicon.png \
courses/events/c-mountain_mania/event.tcl \
courses/events/c-mountain_mania/cupicon.png \
courses/events/c-mountain_mania/hippo_run/course.tcl \
courses/events/c-mountain_mania/hippo_run/info.tcl \
courses/events/c-mountain_mania/hippo_run/preview.png \
courses/events/c-mountain_mania/hippo_run/trees.png \
courses/events/c-mountain_mania/hippo_run/terrain.png \
courses/events/c-mountain_mania/hippo_run/elev.png \
courses/events/c-mountain_mania/in_search_of_vodka/course.tcl \
courses/events/c-mountain_mania/in_search_of_vodka/info.tcl \
courses/events/c-mountain_mania/in_search_of_vodka/elev.rgb \
courses/events/c-mountain_mania/in_search_of_vodka/preview.rgb \
courses/events/c-mountain_mania/in_search_of_vodka/trees.rgb \
courses/events/c-mountain_mania/in_search_of_vodka/terrain.rgb \
courses/events/c-mountain_mania/crazy_path/course.tcl \
courses/events/c-mountain_mania/crazy_path/info.tcl \
courses/events/c-mountain_mania/crazy_path/preview.png \
courses/events/c-mountain_mania/crazy_path/trees.png \
courses/events/c-mountain_mania/crazy_path/terrain.png \
courses/events/c-mountain_mania/crazy_path/elev.png \
courses/events/c-mountain_mania/hey_tux/course.tcl \
courses/events/c-mountain_mania/hey_tux/info.tcl \
courses/events/c-mountain_mania/hey_tux/elev.rgb \
courses/events/c-mountain_mania/hey_tux/preview.rgb \
courses/events/c-mountain_mania/hey_tux/trees.rgb \
courses/events/c-mountain_mania/hey_tux/terrain.rgb \
courses/events/c-mountain_mania/ice_pipeline/course.tcl \
courses/events/c-mountain_mania/ice_pipeline/info.tcl \
courses/events/c-mountain_mania/ice_pipeline/elev.rgb \
courses/events/c-mountain_mania/ice_pipeline/preview.png \
courses/events/c-mountain_mania/ice_pipeline/trees.rgb \
courses/events/c-mountain_mania/ice_pipeline/terrain.rgb \
courses/events/c-mountain_mania/slippy_slidey/course.tcl \
courses/events/c-mountain_mania/slippy_slidey/info.tcl \
courses/events/c-mountain_mania/slippy_slidey/preview.png \
courses/events/c-mountain_mania/slippy_slidey/trees.png \
courses/events/c-mountain_mania/slippy_slidey/terrain.png \
courses/events/c-mountain_mania/slippy_slidey/elev.png \
courses/events/c-mountain_mania/volcanoes/course.tcl \
courses/events/c-mountain_mania/volcanoes/info.tcl \
courses/events/c-mountain_mania/volcanoes/preview.png \
courses/events/c-mountain_mania/volcanoes/trees.png \
courses/events/c-mountain_mania/volcanoes/terrain.png \
courses/events/c-mountain_mania/volcanoes/elev.png \
courses/events/c-mountain_mania/merry_go_round/course.tcl \
courses/events/c-mountain_mania/merry_go_round/info.tcl \
courses/events/c-mountain_mania/merry_go_round/preview.png \
courses/events/c-mountain_mania/merry_go_round/trees.png \
courses/events/c-mountain_mania/merry_go_round/terrain.png \
courses/events/c-mountain_mania/merry_go_round/elev.png \
courses/events/c-mountain_mania/bobsled_ride/course.tcl \
courses/events/c-mountain_mania/bobsled_ride/info.tcl \
courses/events/c-mountain_mania/bobsled_ride/preview.png \
courses/events/c-mountain_mania/bobsled_ride/trees.png \
courses/events/c-mountain_mania/bobsled_ride/terrain.png \
courses/events/c-mountain_mania/bobsled_ride/elev.png \
courses/events/c-mountain_mania/candy_lane/course.tcl \
courses/events/c-mountain_mania/candy_lane/info.tcl \
courses/events/c-mountain_mania/candy_lane/preview.png \
courses/events/c-mountain_mania/candy_lane/trees.png \
courses/events/c-mountain_mania/candy_lane/terrain.png \
courses/events/c-mountain_mania/candy_lane/elev.png \
courses/events/c-mountain_mania/nature_stroll/course.tcl \
courses/events/c-mountain_mania/nature_stroll/info.tcl \
courses/events/c-mountain_mania/nature_stroll/preview.png \
courses/events/c-mountain_mania/nature_stroll/trees.png \
courses/events/c-mountain_mania/nature_stroll/terrain.png \
courses/events/c-mountain_mania/nature_stroll/elev.png \
courses/events/b-herring_run/herringrunicon.png \
courses/events/b-herring_run/hazzard_valley/course.tcl \
courses/events/b-herring_run/hazzard_valley/info.tcl \
courses/events/b-herring_run/hazzard_valley/preview.png \
courses/events/b-herring_run/hazzard_valley/trees.png \
courses/events/b-herring_run/hazzard_valley/terrain.png \
courses/events/b-herring_run/hazzard_valley/elev.png \
courses/events/b-herring_run/mount_herring/course.tcl \
courses/events/b-herring_run/mount_herring/info.tcl \
courses/events/b-herring_run/mount_herring/preview.png \
courses/events/b-herring_run/mount_herring/trees.png \
courses/events/b-herring_run/mount_herring/terrain.png \
courses/events/b-herring_run/mount_herring/elev.png \
courses/events/b-herring_run/ski_jump/course.tcl \
courses/events/b-herring_run/ski_jump/info.tcl \
courses/events/b-herring_run/ski_jump/preview.png \
courses/events/b-herring_run/ski_jump/trees.png \
courses/events/b-herring_run/ski_jump/terrain.png \
courses/events/b-herring_run/ski_jump/elev.png \
courses/events/b-herring_run/cupicon.png \
courses/events/b-herring_run/keep_it_up/course.tcl \
courses/events/b-herring_run/keep_it_up/info.tcl \
courses/events/b-herring_run/keep_it_up/preview.png \
courses/events/b-herring_run/keep_it_up/trees.png \
courses/events/b-herring_run/keep_it_up/terrain.png \
courses/events/b-herring_run/keep_it_up/elev.png \
courses/events/b-herring_run/high_road/course.tcl \
courses/events/b-herring_run/high_road/info.tcl \
courses/events/b-herring_run/high_road/preview.png \
courses/events/b-herring_run/high_road/trees.png \
courses/events/b-herring_run/high_road/terrain.png \
courses/events/b-herring_run/high_road/elev.png \
courses/events/b-herring_run/hamburger_hill/course.tcl \
courses/events/b-herring_run/hamburger_hill/info.tcl \
courses/events/b-herring_run/hamburger_hill/preview.png \
courses/events/b-herring_run/hamburger_hill/trees.png \
courses/events/b-herring_run/hamburger_hill/terrain.png \
courses/events/b-herring_run/hamburger_hill/elev.png \
courses/events/b-herring_run/slalom/course.tcl \
courses/events/b-herring_run/slalom/info.tcl \
courses/events/b-herring_run/slalom/preview.png \
courses/events/b-herring_run/slalom/trees.png \
courses/events/b-herring_run/slalom/terrain.png \
courses/events/b-herring_run/slalom/elev.png \
courses/events/b-herring_run/mount_satan/course.tcl \
courses/events/b-herring_run/mount_satan/info.tcl \
courses/events/b-herring_run/mount_satan/preview.png \
courses/events/b-herring_run/mount_satan/trees.png \
courses/events/b-herring_run/mount_satan/terrain.png \
courses/events/b-herring_run/mount_satan/elev.png \
courses/events/b-herring_run/the_narrow_way/course.tcl \
courses/events/b-herring_run/the_narrow_way/info.tcl \
courses/events/b-herring_run/the_narrow_way/preview.png \
courses/events/b-herring_run/the_narrow_way/trees.png \
courses/events/b-herring_run/the_narrow_way/terrain.png \
courses/events/b-herring_run/the_narrow_way/elev.png \
courses/events/b-herring_run/deadman/course.tcl \
courses/events/b-herring_run/deadman/info.tcl \
courses/events/b-herring_run/deadman/preview.png \
courses/events/b-herring_run/deadman/trees.png \
courses/events/b-herring_run/deadman/terrain.png \
courses/events/b-herring_run/deadman/elev.png \
courses/events/b-herring_run/event.tcl \
courses/events/b-herring_run/snow_valley/course.tcl \
courses/events/b-herring_run/snow_valley/info.tcl \
courses/events/b-herring_run/snow_valley/preview.png \
courses/events/b-herring_run/snow_valley/trees.png \
courses/events/b-herring_run/snow_valley/terrain.png \
courses/events/b-herring_run/snow_valley/elev.png \
courses/events/b-herring_run/tux-toboggan_run/course.tcl \
courses/events/b-herring_run/tux-toboggan_run/info.tcl \
courses/events/b-herring_run/tux-toboggan_run/preview.png \
courses/events/b-herring_run/tux-toboggan_run/trees.png \
courses/events/b-herring_run/tux-toboggan_run/terrain.png \
courses/events/b-herring_run/tux-toboggan_run/elev.png \
courses/events/b-herring_run/skull_mountain/course.tcl \
courses/events/b-herring_run/skull_mountain/info.tcl \
courses/events/b-herring_run/skull_mountain/preview.png \
courses/events/b-herring_run/skull_mountain/trees.png \
courses/events/b-herring_run/skull_mountain/terrain.png \
courses/events/b-herring_run/skull_mountain/elev.png \
courses/events/b-herring_run/penguins_cant_fly/course.tcl \
courses/events/b-herring_run/penguins_cant_fly/info.tcl \
courses/events/b-herring_run/penguins_cant_fly/preview.png \
courses/events/b-herring_run/penguins_cant_fly/trees.png \
courses/events/b-herring_run/penguins_cant_fly/terrain.png \
courses/events/b-herring_run/penguins_cant_fly/elev.png \
courses/events/b-herring_run/ice_labyrinth/course.tcl \
courses/events/b-herring_run/ice_labyrinth/info.tcl \
courses/events/b-herring_run/ice_labyrinth/preview.png \
courses/events/b-herring_run/ice_labyrinth/trees.png \
courses/events/b-herring_run/ice_labyrinth/terrain.png \
courses/events/b-herring_run/ice_labyrinth/elev.png \
courses/events/b-herring_run/ive_got_a_woody/course.tcl \
courses/events/b-herring_run/ive_got_a_woody/info.tcl \
courses/events/b-herring_run/ive_got_a_woody/preview.png \
courses/events/b-herring_run/ive_got_a_woody/trees.png \
courses/events/b-herring_run/ive_got_a_woody/terrain.png \
courses/events/b-herring_run/ive_got_a_woody/elev.png \
courses/events/d-niehoff_experience/herringrunicon.png \
courses/events/d-niehoff_experience/event.tcl \
courses/events/d-niehoff_experience/frozen_lakes/course.tcl \
courses/events/d-niehoff_experience/frozen_lakes/info.tcl \
courses/events/d-niehoff_experience/frozen_lakes/preview.png \
courses/events/d-niehoff_experience/frozen_lakes/trees.png \
courses/events/d-niehoff_experience/frozen_lakes/terrain.png \
courses/events/d-niehoff_experience/frozen_lakes/elev.png \
courses/events/d-niehoff_experience/challenge_one/course.tcl \
courses/events/d-niehoff_experience/challenge_one/info.tcl \
courses/events/d-niehoff_experience/challenge_one/preview.png \
courses/events/d-niehoff_experience/challenge_one/trees.png \
courses/events/d-niehoff_experience/challenge_one/terrain.png \
courses/events/d-niehoff_experience/challenge_one/elev.png \
courses/events/d-niehoff_experience/cupicon.png \
courses/events/d-niehoff_experience/secret_valleys/course.tcl \
courses/events/d-niehoff_experience/secret_valleys/info.tcl \
courses/events/d-niehoff_experience/secret_valleys/preview.png \
courses/events/d-niehoff_experience/secret_valleys/trees.png \
courses/events/d-niehoff_experience/secret_valleys/terrain.png \
courses/events/d-niehoff_experience/secret_valleys/elev.png \
courses/events/d-niehoff_experience/in_search_of_the_holy_grail/course.tcl \
courses/events/d-niehoff_experience/in_search_of_the_holy_grail/info.tcl \
courses/events/d-niehoff_experience/in_search_of_the_holy_grail/preview.png \
courses/events/d-niehoff_experience/in_search_of_the_holy_grail/trees.png \
courses/events/d-niehoff_experience/in_search_of_the_holy_grail/terrain.png \
courses/events/d-niehoff_experience/in_search_of_the_holy_grail/elev.png \
courses/events/d-niehoff_experience/explore_mountains/course.tcl \
courses/events/d-niehoff_experience/explore_mountains/info.tcl \
courses/events/d-niehoff_experience/explore_mountains/preview.png \
courses/events/d-niehoff_experience/explore_mountains/trees.png \
courses/events/d-niehoff_experience/explore_mountains/terrain.png \
courses/events/d-niehoff_experience/explore_mountains/elev.png \
courses/events/d-niehoff_experience/tux_at_home/course.tcl \
courses/events/d-niehoff_experience/tux_at_home/info.tcl \
courses/events/d-niehoff_experience/tux_at_home/preview.png \
courses/events/d-niehoff_experience/tux_at_home/trees.png \
courses/events/d-niehoff_experience/tux_at_home/terrain.png \
courses/events/d-niehoff_experience/tux_at_home/elev.png \
courses/events/d-niehoff_experience/wild_mountains/course.tcl \
courses/events/d-niehoff_experience/wild_mountains/info.tcl \
courses/events/d-niehoff_experience/wild_mountains/preview.png \
courses/events/d-niehoff_experience/wild_mountains/trees.png \
courses/events/d-niehoff_experience/wild_mountains/terrain.png \
courses/events/d-niehoff_experience/wild_mountains/elev.png \
courses/events/d-niehoff_experience/chinese_wall/course.tcl \
courses/events/d-niehoff_experience/chinese_wall/info.tcl \
courses/events/d-niehoff_experience/chinese_wall/preview.png \
courses/events/d-niehoff_experience/chinese_wall/trees.png \
courses/events/d-niehoff_experience/chinese_wall/terrain.png \
courses/events/d-niehoff_experience/chinese_wall/elev.png \
courses/events/a-tux_racer/bumpy_ride/course.tcl \
courses/events/a-tux_racer/bumpy_ride/info.tcl \
courses/events/a-tux_racer/bumpy_ride/preview.png \
courses/events/a-tux_racer/bumpy_ride/trees.png \
courses/events/a-tux_racer/bumpy_ride/terrain.png \
courses/events/a-tux_racer/bumpy_ride/elev.png \
courses/events/a-tux_racer/herringrunicon.png \
courses/events/a-tux_racer/event.tcl \
courses/events/a-tux_racer/bunny_hill/course.tcl \
courses/events/a-tux_racer/bunny_hill/info.tcl \
courses/events/a-tux_racer/bunny_hill/preview.png \
courses/events/a-tux_racer/bunny_hill/trees.png \
courses/events/a-tux_racer/bunny_hill/terrain.png \
courses/events/a-tux_racer/bunny_hill/elev.png \
courses/events/a-tux_racer/cupicon.png \
courses/events/a-tux_racer/twisty_slope/course.tcl \
courses/events/a-tux_racer/twisty_slope/info.tcl \
courses/events/a-tux_racer/twisty_slope/preview.png \
courses/events/a-tux_racer/twisty_slope/trees.png \
courses/events/a-tux_racer/twisty_slope/terrain.png \
courses/events/a-tux_racer/twisty_slope/elev.png \
courses/events/a-tux_racer/frozen_river/course.tcl \
courses/events/a-tux_racer/frozen_river/info.tcl \
courses/events/a-tux_racer/frozen_river/preview.png \
courses/events/a-tux_racer/frozen_river/trees.png \
courses/events/a-tux_racer/frozen_river/terrain.png \
courses/events/a-tux_racer/frozen_river/elev.png \
courses/events/a-tux_racer/path_of_daggers/course.tcl \
courses/events/a-tux_racer/path_of_daggers/info.tcl \
courses/events/a-tux_racer/path_of_daggers/preview.png \
courses/events/a-tux_racer/path_of_daggers/trees.png \
courses/events/a-tux_racer/path_of_daggers/terrain.png \
courses/events/a-tux_racer/path_of_daggers/elev.png \
			courses/themes/huds/common/huds.tcl \
				courses/themes/items/herrings/herring_dead.png \
				courses/themes/items/herrings/herring_red.png \
				courses/themes/items/herrings/items.tcl \
				courses/themes/items/herrings/star.png \
				courses/themes/items/herrings/herring_green.png \
				courses/themes/items/flags/flag2.png \
				courses/themes/items/flags/items.tcl \
				courses/themes/items/stuff/items.tcl \
				courses/themes/items/stuff/life.png \
		courses/themes/items/common/finish.png \
		courses/themes/items/common/items.tcl \
		courses/themes/items/common/flag.png \
		courses/themes/items/common/herring_standard.png \
		courses/themes/items/common/start.png \
		courses/themes/conditions/common/nighttop.png \
		courses/themes/conditions/common/sunny_light.tcl \
		courses/themes/conditions/common/eveningtop.png \
		courses/themes/conditions/common/nightback.png \
		courses/themes/conditions/common/cloudyleft.png \
		courses/themes/conditions/common/envmap.png \
		courses/themes/conditions/common/sunnyleft.png \
		courses/themes/conditions/common/sunnybottom.png \
		courses/themes/conditions/common/cloudyfront.png \
		courses/themes/conditions/common/eveningleft.png \
		courses/themes/conditions/common/eveningright.png \
		courses/themes/conditions/common/eveningfront.png \
		courses/themes/conditions/common/evening_light.tcl \
		courses/themes/conditions/common/foggy_light.tcl \
		courses/themes/conditions/common/sunnyfront.png \
		courses/themes/conditions/common/eveningbottom.png \
		courses/themes/conditions/common/cloudytop.png \
		courses/themes/conditions/common/cloudyright.png \
		courses/themes/conditions/common/cloudybottom.png \
		courses/themes/conditions/common/cloudyback.png \
		courses/themes/conditions/common/conditions.tcl \
		courses/themes/conditions/common/sunnyback.png \
		courses/themes/conditions/common/nightfront.png \
		courses/themes/conditions/common/night_light.tcl \
		courses/themes/conditions/common/sunnyright.png \
		courses/themes/conditions/common/eveningback.png \
		courses/themes/conditions/common/nightleft.png \
		courses/themes/conditions/common/nightright.png \
		courses/themes/conditions/common/nightenv.png \
		courses/themes/conditions/common/nightbottom.png \
		courses/themes/conditions/common/sunnytop.png \
		courses/themes/conditions/common/eveningenv.png \
		courses/themes/terrains/add/road.png \
		courses/themes/terrains/add/terrains.tcl \
		courses/themes/terrains/add/speed.png \
		courses/themes/terrains/ice/greenice.png \
		courses/themes/terrains/ice/terrains.tcl \
		courses/themes/terrains/ice/hardice.png \
		courses/themes/terrains/mud/mudstart.png \
		courses/themes/terrains/mud/mudstop.png \
		courses/themes/terrains/mud/mud.png \
		courses/themes/terrains/mud/mudprint.png \
		courses/themes/terrains/mud/terrains.tcl \
		courses/themes/terrains/mud/mudparticles.png \
		courses/themes/terrains/lava/lavastone.png \
		courses/themes/terrains/lava/terrains.tcl \
		courses/themes/terrains/lava/lava.png \
		courses/themes/terrains/sand/sand.png \
		courses/themes/terrains/sand/redsand.png \
		courses/themes/terrains/sand/terrains.tcl \
		courses/themes/terrains/rock/snowyrock.png \
		courses/themes/terrains/rock/terrains.tcl \
		courses/themes/terrains/snow/snowygrass.png \
		courses/themes/terrains/snow/dirtsnow.png \
		courses/themes/terrains/snow/buttprint.png \
		courses/themes/terrains/snow/snowparticles.png \
		courses/themes/terrains/snow/stsnow1.png \
		courses/themes/terrains/snow/stsnow2.png \
		courses/themes/terrains/snow/dsnow.png \
		courses/themes/terrains/snow/dsnow2.png \
		courses/themes/terrains/snow/terrains.tcl \
		courses/themes/terrains/snow/dirtsnowparticles.png \
		courses/themes/terrains/snow/buttstart.png \
		courses/themes/terrains/snow/buttstop.png \
		courses/themes/terrains/common/snow.png \
		courses/themes/terrains/common/buttprint.png \
		courses/themes/terrains/common/crack.png \
        courses/themes/terrains/common/crack2.png \
		courses/themes/terrains/common/snowparticles.png \
		courses/themes/terrains/common/rock.png \
		courses/themes/terrains/common/terrains.tcl \
		courses/themes/terrains/common/ice.png \
		courses/themes/terrains/common/buttstart.png \
		courses/themes/terrains/common/buttstop.png \
		courses/themes/terrains/common/snowflake1.png \
		courses/themes/terrains/common/snowflake2.png \
		courses/themes/terrains/common/snowflake3.png \
		courses/themes/models/stuff/barrier.png \
		courses/themes/models/stuff/barrier.ac \
		courses/themes/models/stuff/models.tcl \
		courses/themes/models/trees/tree_xmas.ac \
		courses/themes/models/trees/tree_xmas.png \
		courses/themes/models/trees/models.tcl \
		courses/themes/models/common/shrub.png \
		courses/themes/models/common/tree.png \
		courses/themes/models/common/tree_barren.ac \
		courses/themes/models/common/shrub.ac \
		courses/themes/models/common/tree_barren.png \
		courses/themes/models/common/tree.ac \
		courses/themes/models/common/models.tcl \
		courses/themes/ppracer.tcl \
		courses/themes/common.tcl \
		courses/course_idx.tcl \
		fonts/PaperCuts20.ttf \
		fonts/std.ttf \
		music/race1-jt.ogg \
		music/wonrace1-jt.ogg \
		music/credits1-cp.ogg \
		music/credits1-cp.ogg \
		music/options1-jt.ogg \
		music/start1-jt.ogg \
		music/readme \
		music/calmrace-ks.ogg \
		music/lostrace-ks.ogg \
		music/nighttime-fc.ogg \
		music/raceintro-ks.ogg \
		music/spunkyrace-ks.ogg \
		music/wonrace-ks.ogg \
		music/themes.tcl \
		textures/menu_top_left.png \
		textures/checkmark.png \
		textures/snowparticles.png \
		textures/gaugespeedmask.png \
		textures/splash.png \
		textures/splash_small.png \
		textures/herringicon.png \
		textures/herringicon-ok.png \
		textures/timeicon.png \
		textures/timeicon-no.png \
		textures/menu_bottom_left.png \
		textures/menu_top_right.png \
		textures/nopreview.png \
		textures/snow_button.png \
        textures/modelpreviews_button.png \
		textures/mirror_button.png \
		textures/mask_outline2.png \
		textures/gaugeenergymask.png \
		textures/wind_button.png \
		textures/energymask.png \
		textures/gaugeoutline.png \
		textures/menu_bottom_right.png \
		textures/listbox_arrows.png \
		textures/noicon.png \
		textures/conditions_button.png \
		textures/mouse_cursor.png \
		textures/tuxlife.png \
		textures/menu_title.png \
		textures/menu_title_small.png \
		tux.tcl \
		samuel.tcl \
		trixi.tcl \
		speedy.tcl \
		tux_snowboard.tcl \
		sounds/tux_hit_tree1.wav \
		sounds/tux_on_snow1.wav \
		sounds/tux_on_rock1.wav \
		sounds/tux_on_ice1.wav \
        sounds/52143__blaukreuz__imp_01.wav \
        sounds/52143__blaukreuz__imp_01_modified_v2.wav \
		sounds/fish_pickup1.wav \
		sounds/fish_pickup2.wav \
		sounds/fish_pickup3.wav \
		terrains.png \
		objects.png \
		etracer_init.tcl \
		tux_walk.tcl \
		models.tcl
