
AM_CPPFLAGS = -DPP_DATADIR=\"$(ppdatadir)\"

bin_PROGRAMS = etracer

etracer_SOURCES =				\
	ppgltk/ppgltk.h				\
	ppgltk/listbox.h			\
	ppgltk/ssbutton.cpp			\
	ppgltk/ssbutton.h			\
	ppgltk/checkbox.cpp			\
	ppgltk/checkbox.h			\
	ppgltk/textarea.cpp			\
	ppgltk/textarea.h			\
	ppgltk/ui_mgr.cpp			\
	ppgltk/ui_mgr.h				\
	ppgltk/ui_snow.cpp			\
	ppgltk/ui_snow.h			\
	ppgltk/ui_theme.cpp			\
	ppgltk/ui_theme.h			\
	ppgltk/button.cpp			\
	ppgltk/button.h				\
	ppgltk/frame.cpp			\
	ppgltk/frame.h				\
	ppgltk/entry.cpp			\
	ppgltk/entry.h				\
	ppgltk/widget.cpp			\
	ppgltk/widget.h				\
	ppgltk/alg/color.cpp			\
	ppgltk/alg/color.h			\
	ppgltk/alg/defs.h			\
	ppgltk/alg/matrix.cpp			\
	ppgltk/alg/matrix.h			\
	ppgltk/alg/quat.cpp			\
	ppgltk/alg/quat.h			\
	ppgltk/alg/vec2d.cpp			\
	ppgltk/alg/vec2d.h			\
	ppgltk/alg/vec3d.cpp			\
	ppgltk/alg/vec3d.h			\
	ppgltk/alg/plane.h			\
	ppgltk/alg/plane.cpp			\
	ppgltk/alg/glhelper.h			\
	ppgltk/alg/gaus.h			\
	ppgltk/alg/glhelper.cpp			\
	ppgltk/alg/poly.h			\
	ppgltk/alg/poly.cpp			\
	ppgltk/alg/signal.h			\
	ppgltk/audio/audio.cpp			\
	ppgltk/audio/audio.h			\
	ppgltk/audio/audio_data.cpp		\
	ppgltk/audio/audio_data.h		\
	ppgltk/images/image.cpp			\
	ppgltk/images/image.h			\
	ppgltk/images/png_reader.cpp		\
	ppgltk/images/png_reader.h		\
	ppgltk/images/rgb_reader.cpp		\
	ppgltk/images/rgb_reader.h		\
	ppgltk/images/ppm_writer.cpp		\
	ppgltk/images/ppm_writer.h		\
	course_load.cpp				\
	course_load.h				\
	course_mgr.cpp				\
	course_mgr.h				\
	course_quad.cpp				\
	course_quad.h				\
	course_render.cpp			\
	course_render.h				\
	credits.cpp				\
	credits.h				\
	debug.cpp				\
	debug.h					\
	error_util.cpp				\
	error_util.h				\
	event_select.cpp			\
	event_select.h				\
	file_util.cpp				\
	file_util.h				\
	fog.cpp					\
	fog.h					\
	fps.cpp					\
	fps.h					\
        game_config.cpp				\
        game_config.h				\
        game_type_select.cpp			\
        game_type_select.h			\
        game_over.cpp				\
        game_over.h				\
	gl_util.cpp				\
	gl_util.h				\
	hier.cpp				\
	hier.h					\
	hier_cb.cpp				\
	hier_cb.h				\
	hier_util.cpp				\
	hier_util.h				\
  highscore.cpp   \
  highscore.h   \
	hud.cpp					\
	hud.h					\
	intro.cpp				\
	intro.h					\
	joystick.cpp				\
	joystick.h				\
	keyframe.cpp				\
	keyframe.h				\
	lights.cpp				\
	lights.h				\
	loading.cpp				\
	loading.h				\
	loop.cpp				\
	loop.h					\
	main.cpp				\
	mirror_course.cpp			\
	mirror_course.h				\
	player.cpp				\
	player.h				\
	pp_classes.h				\
        nmrcl.cpp				\
        nmrcl.h					\
        os_util.cpp				\
        os_util.h				\
	part_sys.cpp				\
	part_sys.h				\
	paused.cpp				\
	paused.h				\
	phys_sim.cpp				\
	phys_sim.h				\
	quadtree.cpp				\
	quadtree.h				\
	race_select.cpp				\
	race_select.h				\
	event_race_select.cpp			\
	event_race_select.h			\
	racing.cpp				\
	racing.h				\
	render_util.cpp				\
	render_util.h				\
	reset.h					\
        reset.cpp				\
	screenshot.cpp				\
	screenshot.h				\
	snow.cpp				\
	snow.h					\
	splash_screen.cpp			\
	splash_screen.h				\
	string_util.cpp				\
	string_util.h				\
	tcl_util.cpp				\
	tcl_util.h				\
	tex_font_metrics.cpp			\
	tex_font_metrics.h			\
	textures.cpp				\
	textures.h				\
        track_marks.cpp				\
        track_marks.h				\
	model_hndl.cpp					\
	model_hndl.h					\
        tux_shadow.cpp				\
        tux_shadow.h				\
	pp_types.h				\
	view.cpp				\
	view.h					\
	viewfrustum.cpp				\
	viewfrustum.h				\
	winsys.cpp				\
	winsys.h				\
	videoconfig.cpp				\
	videoconfig.h				\
	audioconfig.cpp				\
	audioconfig.h				\
	configmode.cpp				\
	configmode.h				\
	configuration.cpp			\
	configuration.h				\
	graphicsconfig.cpp			\
	graphicsconfig.h			\
	joystickconfig.cpp			\
	joystickconfig.h			\
	keyboardconfig.cpp			\
	keyboardconfig.h			\
	stuff.cpp				\
	stuff.h					\
	game_mgr.cpp				\
	game_mgr.h				\
	bench.cpp				\
	bench.h					\
	callbacks.cpp				\
	callbacks.h				\
	translation.cpp				\
	translation.h				\
	ppgltk/alignment.cpp			\
	ppgltk/alignment.h			\
	ppgltk/model.cpp			\
	ppgltk/model.h				\
	ppgltk/model_ac.cpp			\
	ppgltk/model_ac.h			\
	ppgltk/font.cpp				\
	ppgltk/font.h				\
	ppgltk/label.cpp			\
	ppgltk/label.h				\
	\
	\
	ppgltk/FT/FTBBox.h		\
	ppgltk/FT/FTCharToGlyphIndexMap.h	\
	ppgltk/FT/FTCharmap.h		\
	ppgltk/FT/FTFace.h		\
	ppgltk/FT/FTFont.h		\
	ppgltk/FT/FTGL.h		\
	ppgltk/FT/FTGLTextureFont.h	\
	ppgltk/FT/FTGlyph.h		\
	ppgltk/FT/FTGlyphContainer.h	\
	ppgltk/FT/FTLibrary.h		\
	ppgltk/FT/FTList.h		\
	ppgltk/FT/FTPoint.h		\
	ppgltk/FT/FTSize.h		\
	ppgltk/FT/FTVector.h		\
	ppgltk/FT/FTTextureGlyph.h	\
	\
	\
	ppgltk/FT/FTCharmap.cpp		\
	ppgltk/FT/FTFace.cpp		\
	ppgltk/FT/FTFont.cpp		\
	ppgltk/FT/FTGLTextureFont.cpp	\
	ppgltk/FT/FTGlyph.cpp		\
	ppgltk/FT/FTGlyphContainer.cpp	\
	ppgltk/FT/FTLibrary.cpp		\
	ppgltk/FT/FTPoint.cpp		\
	ppgltk/FT/FTSize.cpp		\
	ppgltk/FT/FTTextureGlyph.cpp


EXTRA_DIST = ppgltk/listbox.cpp 	\
	ppgltk/FT/license.txt		\
	ppgltk/FT/README.txt

