
SUBDIRS = \
	bronze_set \
	comepeces \
	desperation \
	el_reto \
	follow_white_rabbit \
	herrings_half_pipe \
	i_like_spike_2 \
	inception \
	laberinto \
	penguins_day \
	pygoscelis_adeliae \
	rock_n_roll \
	slide_or_fly \
	snow_run_1 \
	snow_run_2 \
	the_long_ride \
	touch_the_moon \
	touristic_ride \
	tuxway \
	twists \
	wild_ride \
	wild_west_chute_out

pkgdatadir = $(datadir)/$(PACKAGE)/courses/extras

pkgdata_DATA = \
	courses.lst

EXTRA_DIST = $(pkgdata_DATA)
